# nheko-library

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  all.pro
docs/: Client.md  how-to-itegrate.md
examples/: account_integration.cpp  example.cpp  examples.pro  profileInfo.cpp  webrtc.cpp  webrtc.qml  webrtc.qrc
interfaces/: Account.capnp  AccountReader.capnp  Secret.capnp
src/: Application.h  Authentication.cpp  Authentication.h  CMUserInfo.cpp  CMUserInfo.h  Cache.cpp  Cache.h  CacheStructs.h  Cache_p.h  Chat.cpp  Chat.h  ChatPage.cpp  ChatPage.h  CibaAuthentication.cpp  CibaAuthentication.h  Client.cpp  Client.h  EventAccessors.cpp  EventAccessors.h  Features.h  JdenticonProvider.cpp  Logging.cpp  Logging.h  Login.cpp  Login.h  MatrixClient.cpp  MatrixClient.h  PXMatrixClient.cpp  PXMatrixClient.h  PresenceEmitter.cpp  PxMatrixClient.cpp  PxMatrixClient.h  RestRequest.cpp  RestRequest.h  UIA.cpp  UIA.h  UserInformation.h  UserProfile.cpp  UserProfile.h  UserSettings.cpp  (+6 more)
src/config/: nheko.h
src/encryption/: DeviceVerificationFlow.cpp  DeviceVerificationFlow.h  Olm.cpp  Olm.h  SelfVerificationStatus.cpp  SelfVerificationStatus.h  VerificationManager.cpp  VerificationManager.h
src/gstreamer/: gst_ios_init.h  gst_ios_init.m  gstreamer_android.c  gstreamer_android.cpp
src/px/: PxAccountsClient.cpp  PxAccountsClient.h  PxCMManager.cpp  PxCMManager.h  PxSecretsClient.cpp  PxSecretsClient.h  RpcClient.cpp  RpcClient.h
src/rest/: HttpRequest.cpp  HttpRequest.h
src/timeline/: EventStore.cpp  EventStore.h  Permissions.cpp  Timeline.cpp  Timeline.h
src/voip/: AudioDeviceControl.cpp  AudioDeviceControl.h  AudioDevices.cpp  AudioDevices.h  AudioInfo.cpp  AudioInfo.h  AudioInputControl.cpp  AudioInputControl.h  CallDevices.cpp  CallDevices.h  CallManager.cpp  CallManager.h  InputDevices.cpp  InputDevices.h  WebRTCSession.cpp  WebRTCSession.h
tests/: AuthenticationTest.h  ClientTest.h  LoginTest.h  MatrixTestAccounts.txt  ProfileInfoTest.h  RoomTest.h  UserSettingsTest.h  dummytest.h  main.cpp  testrunner.h  tests.pro
